welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: type mismatch;
 found   : Int(0)
 required: Boolean
	case 0 => "10:00"
             ^alarmClock:5: error: type mismatch;
 found   : Int(6)
 required: Boolean
	case 6 => "10:00"
             ^