welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (vacation) {"10:00"}
	else {(0<=day)&&(day<=6) match{
	case 0 => "10:00"
	case 6 => "10:00"
	case _ => "7:00"	
	}
}}
